Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:

	Now, enter does not insert new line when in overtype mode (unless at
	end of file).  Somebody asked for this.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* b.c, b.h, joerc.in, rc.c, types.h, ublock.c, uedit.c:

	Added -purify option which fixes indentation
	if necessary for ^K, ^K. and smart backspace.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* ublock.c :

	^K , and ^K . now have improved purity checking
	and automatic block selection.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* rc.c, uedit.c, types.h, joerc.in:

	Added 'smartbacks' option.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c, b.c:

	Backspace is now smart when 'smarthome' is set.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c :

	Fix new bug caused by previous bug fix :-)


Tue Apr 20 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c :

	Fix bug where double wide characters typed at end of line was
	screwing up (was assuming that they were one character wide in
	the utypebw optimization logic).


Tue Apr 20 2004  Joe Allen <jhallen@world.std.com>
	* cmd.c, joerc.in, rc.c, types.h, uedit.c, uedit.h:

	Applied David Phillips' smart home key patch.

	Changed  ` u to ` x.

Sun Apr 18 2004  Joe Allen <jhallen@world.std.com>
	* syntax.c, uedit.c:

	Added ` u to insert unicode characters in hex.

	Fixed typeing of unicode (utypebw() optimization bug).

	Fixed editor hang when syntax hightlighter hits unicode characters.

Sat Apr 17 2004  Joe Allen <jhallen@world.std.com>
	* bw.c menu.c qw.c scrn.c scrn.h utf8.h w.c w.h:

	Allow UTF-8 in menu entries.

	Clear up genfield() and genfmt() stuff.  Now control characters in
	file names are properly displayed.

	When UTF-8 character decodes to 127 - 159, 0 - 31, display it
	as a control character.

Sat Apr 17 2004  Joe Allen <jhallen@world.std.com>
	* w.c:

	Oops: fixed status line.

Fri Apr 16 2004  Joe Allen <jhallen@world.std.com>